--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^3.7.0",
     "resend": "^6.9.1",
+    "sonner": "^2.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
